# odvm

./: LICENSE  README.md  ReadMe.md  config.json  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.py
assistant/: task_detector.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
core/: runner.py
docs/: limitations.md
docs/source/: conf.py  index.rst
eda/: visualizer.py
modeling/: explainer.py  trainer.py  tuner.py
odvm/: __init__.py  constants.py  exceptions.py  odvm.py  utils.py
odvm.egg-info/: PKG-INFO  SOURCES.txt
odvm/DataLoading/: __init__.py  base.py  dask_loader.py  pandas_loader.py
odvm/DataPreprocessing/: __init__.py  base.py  categorical.py  numeric.py  text.py
odvm/DataProfiler/: __init__.py  base.py  dask_profiler.py  pandas_profiler.py
odvm/DataVisualization/: __init__.py  base.py  distributions.py  missing_data.py  relationships.py
odvm/ModelExplanation/: __init__.py  feature_importance.py  shap_explainer.py
odvm/ModelTrainer/: __init__.py  base.py  classifiers.py  regressors.py
odvm/assistant/: task_detector.py
odvm/core/: runner.py
odvm/eda/: analyzer.py  visualizer.py
odvm/modeling/: evaluator.py  model_selector.py
odvm/preprocess/: cleaner.py  encoder.py  scaler.py  splitter.py
odvm/tests/: test_eda.py
outputs/models/: best_model.pkl
outputs/reports/: model_report.csv  model_report.html
preprocess/: cleaner.py
reporting/: report_builder.py
tests/eda_on_datasets/1/: model_report.html
tests/eda_on_datasets/1/outputs/: eda_summary.json
tests/eda_on_datasets/2/outputs/: eda_summary.json
tests/eda_on_datasets/3/outputs/: eda_summary.json
utils/: detect_backend.py
